--- a/UniMeet/manifest.json
+++ b/UniMeet/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Friendly Chat",
-  "short_name": "Friendly Chat",
+  "name": "uniMeet",
+  "short_name": "uniMeet",
   "start_url": "/index.html",
   "display": "standalone",
   "orientation": "portrait",
