--- a/UniMeet/firebase.json
+++ b/UniMeet/firebase.json
@@ -11,7 +11,9 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+     "cleanUrls": true,
+    "trailingSlash": false
   },
   "firestore": {
     "rules": "firestore.rules",
